--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@
 # Install new dependencies & upgrade subdependencies:
 #   pip install -r requirements.txt --upgrade --upgrade-strategy eager
 ###
-python-telegram-bot==20.0a6
+python-telegram-bot[job-queue]==20.0a6
 requests==2.28.1
 pyairtable==1.3.0
