--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@
 # Install new dependencies & upgrade subdependencies:
 #   pip install -r requirements.txt --upgrade --upgrade-strategy eager
 ###
-python-telegram-bot[job-queue]==20.0a6
-requests==2.28.1
-boto3==1.26.41
-numpy==1.24.1
-opencv-python==4.7.0.68
+
+python-telegram-bot[job-queue]==20.1
+requests==2.28.2
+boto3==1.26.82
+openai==0.27.0
+google-cloud-translate==3.11.0
