--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@
 
 python-telegram-bot[job-queue]==20.1
 requests==2.28.2
-boto3==1.26.82
+boto3==1.26.86
 openai==0.27.0
 google-cloud-translate==3.11.0
+botocore==1.29.86
+matplotlib~=3.7.1
